<resources>
    <string name="app_name">MyCupApp</string>

    <string name="unknown_response" translatable="false">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response" translatable="false">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled" translatable="false">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error" translatable="false">An unknown error occurred</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="add_poule_button">Add Group</string>
    <string name="edit_button">Edit</string>
    <string name="add_team_button">Add Team</string>
    <string name="delete_team_button">Delete</string>
    <string name="show_team_list_button">Teams</string>
    <string name="show_poules_button">Group</string>
    <string name="show_scheme_button">Scheme</string>
    <string name="show_ranking_button">Ranking</string>

    <string name="poule_settings_text_view_poule_name">Group Name:</string>

    <string name="publish_tournament_dialog_text_view_question">Do you want to share this tournament?</string>

    <string name="tab_ranking_text_view_ranking">#</string>
    <string name="tab_ranking_text_view_team">Team</string>
    <string name="tab_ranking_text_view_matches_won">W</string>
    <string name="tab_ranking_text_view_matches_draw">D</string>
    <string name="tab_ranking_text_view_matches_lost">L</string>
    <string name="tab_ranking_text_view_matches">M</string>
    <string name="tab_ranking_text_view_points">P</string>
    <string name="tab_ranking_text_view_goals_for">GF</string>
    <string name="tab_ranking_text_view_goals_against">GA</string>

    <string name="edit_team_text_view_team">Team:</string>
    <string name="edit_team_text_view_coach">Coach:</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="edit_match_text_view_home_team">Home Team</string>
    <string name="edit_match_text_view_opponent">Opponent</string>
    <string name="team_list">Group</string>
    <string name="ranking">Ranking</string>

    <string name="team_removed_message">Team Removed!</string>
    <string name="team_removal_warning">Group should contain at least 2 teams</string>

    <string name="no_empty_scores_message">Both scores should be filled or left empty !</string>
    <string name="scores_should_be_numbers_message">Scores should be numbers!</string>
    <string name="tournament_settings_text_view_tournament_name">Tournament</string>
    <string name="location_text_view">Location</string>
    <string name="welcome_text_view_welcome">Welcome to MyCupApp</string>
    <string name="welcome_text_view_intro">With this App you can organize your own tournaments and competitions, share live results or follow a tournament</string>
    <string name="tournament_text_view_intro">The following groups are part of this tournament</string>
    <string name="tournament_settings_text_view_location">Location:</string>
    <string name="save_tournament_button">Save</string>
    <string name="tournament_text_view_poule_list_view_header">Group List:</string>

    <string name="poule_text_view_intro">The following teams are part of this group</string>

    <string name="home_button">home</string>
    <string name="delete_tournament_button">Delete Tournament</string>
    <string name="tournament_creation_cannot_be_removed_message">This item cannot be removed</string>
    <string name="save_poule_button">Save</string>
    <string name="poule_text_view_teams_list_view_header">Teams:</string>
    <string name="show_tournament">Tournament</string>
    <string name="show_tournament_button">Tournament</string>
    <string name="menu_poule_name_text">Group: </string>
    <string name="menu_tournament_name_text">Tournament: </string>
    <string name="menu_tournament_settings_text">Tournament Settings</string>
    <string name="menu_poule_settings_text">Group Settings</string>
    <string name="menu_team_name_text">Team: </string>

    <string name="welcome_image_button_descr_welcome">Welcome and Start</string>
    <string name="descr_deleteTournament">Delete Tournament</string>
    <string name="descr_savePoule">Save Group</string>
    <string name="descr_saveTournament">Save Tournament</string>
    <string name="tournament_image_button_descr_add_poule" translatable="false">Add Group</string>
    <string name="poule_image_button_description_add_team">Add Team</string>
    <string name="descr_startTournamentActivity" translatable="false">Start Tournament Activity</string>
    <string name="descr_startSchemeTableActivity" translatable="false">Start Scheme Table Activity</string>
    <string name="descr_startSchemeActivity" translatable="false">Start Scheme Activity</string>
    <string name="descr_startRankingActivity" translatable="false">Start Ranking Activity</string>
    <string name="select_tournament_text_view_intro">Select an existing tournament or create a new one</string>
    <string name="select_tournament_text_view_tournaments_list_view_header">Tournaments:</string>
    <string name="select_tournament_image_button_descr_add_tournament">Add Tournament</string>
    <string name="tournament_settings_text_view_date">Date</string>
    <string name="enter_poule_name_dialog_text_view_enter_poule_name">Enter Group name:</string>
    <string name="enter_team_name_dialog_text_view_enter_team_name">Enter Team name:</string>
    <string name="enter_tournament_name_dialog_text_view_enter_tournament_name">Enter Tournament name:</string>
    <string name="list_item_text_view_1" translatable="false">TextView</string>
    <string name="toast_message_team_name_twice">already part of this group</string>
    <string name="toast_message_poule_name_twice">already part of this tournament</string>
    <string name="tournament_settings_text_view_nrof_fields">Number of fields</string>
    <string name="tournament_settings_text_view_full_competition">Competition</string>
    <string name="tournament_settings_button_select_date">Select Date</string>
    <string name="tournament_settings_switch_value_competition_full">Full</string>
    <string name="tournament_settings_switch_value_competition_half">Half</string>
    <string name="welcome_button_start">Start</string>
    <string name="scheme_ranking_activity_text_view_ranking">Ranking</string>
    <string name="scheme_ranking_activity_text_view_scheme">Scheme</string>
    <string name="scheme_ranking_activity_text_view_tab_scheme">Table</string>
    <string name="poule_text_view_poule_name">Group:</string>
    <string name="round_round_name">Round</string>
    <string name="round_scheme_adapter_text_round">Round</string>
    <string name="publish_tournament">share</string>
    <string name="welcome_button_follow">Follow</string>
    <string name="welcome_button_organize">Organize</string>
    <string name="tournament_text_view_tournament_name">Tournament:</string>

</resources>
