<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_team"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pouleapp.activities.EditTeamActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/edit_team_text_view_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_team_text_view_team" />

            <EditText
                android:id="@+id/edit_team_edit_text_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/edit_team_text_view_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_team_text_view_coach" />

            <EditText
                android:id="@+id/edit_team_edit_text_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/edit_match_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:onClick="cancel"/>

            <Button
                android:id="@+id/edit_match_button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                android:onClick="updateTeam"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</LinearLayout>