<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.pouleapp.Activities.TournamentSettingsActivity">


    <TextView
        android:id="@+id/tournament_settings_text_view_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_settings_text_view_location"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tournament_settings_edit_text_location" />

    <EditText
        android:id="@+id/tournament_settings_edit_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tournament_settings_edit_text_tournament_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tournament_settings_vertical_guideline" />


    <android.support.constraint.Guideline
        android:id="@+id/tournament_settings_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.39" />

    <TextView
        android:id="@+id/tournament_settings_text_view_tournament_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/tournament_settings_text_view_tournament_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tournament_settings_edit_text_tournament_name" />

    <EditText
        android:id="@+id/tournament_settings_edit_text_tournament_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tournament_settings_vertical_guideline" />

    <TextView
        android:id="@+id/tournament_settings_text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_settings_text_view_date"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tournament_settings_edit_text_date" />

    <EditText
        android:id="@+id/tournament_settings_edit_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/tournament_settings_vertical_guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tournament_settings_edit_text_location" />

    <Button
        android:id="@+id/tournament_settings_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="saveTournamentSettings"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
