<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.pouleapp.Activities.TournamentActivity">

    <TextView
        android:id="@+id/tournament_text_view_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tournament_text_view_intro"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/tournament_text_view_poule_list_view_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tournament_text_view_poule_list_view_header"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tournament_guideline_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="307dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="71dp" />


    <android.support.constraint.Guideline
        android:id="@+id/tournament_guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/tournament_list_view_poules"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tournament_guideline_horizontal"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/tournament_image_button_add_poule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?android:attr/windowBackground"
        android:contentDescription="@string/tournament_image_button_descr_add_poule"
        android:onClick="addPoule"
        android:tint="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="@+id/tournament_text_view_poule_list_view_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tournament_text_view_poule_list_view_header"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_add_circle_48dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tournament_fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="publishTournamentDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share" />

</android.support.constraint.ConstraintLayout>
